# final-project-felschr

./: .gitmodules  README.md  default.conf  flake.nix  ncurses.patch  rebuild.sh
motion-handler/: .gitignore  Cargo.toml  Makefile  motion-handler-start-stop  motion-handler.c
motion-handler/.cargo/: config.toml
