[package]
name = "motion-handler"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-backtrace = { version = "0.16.0", features = ["esp32s3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "log-04", "unstable"] }
